Update the gateway